# cardpile

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: cardpile.hpp
include/cardpile/: scanner.hpp
include/cardpile/detail/: dfa.hpp  nfa.hpp  utility.hpp
tests/: CMakeLists.txt  test1.cpp
